--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SF Bike</string>
     <string name="tweet">Tweet</string>
     <string name="email">Email</string>
+    <string name="call">Call</string>
 </resources>
